Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20867

Perform careful review of "Server crashes with BACKUP STAGE and FLUSH TABLE table_name"

    XMLWordPrintable

Details

    Description

      Revision: https://github.com/MariaDB/server/commit/c2e0a0b17544bf984e21094252528110e5a323f6

      It definitely has a few minor glitches, doesn't seem to go well inline with the design.

      Attachments

        Issue Links

          Activity

            People

              svoj Sergey Vojtovich
              svoj Sergey Vojtovich
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: